Account for table rows in the "Filter by Group" regexp pattern

Move the creation of the regular expression pattern to a static method
so the unit test can ensure it matches the group view. Call the
FieldFormat methods for choosing the delimiter values. Add multiple
additional unit tests to verify.

BUG: 427145
FIXED-IN: 3.4